--- a/index.html
+++ b/index.html
@@ -13,10 +13,19 @@
         <div class="header">
             <h1>Where in the world?</h1>
             <button class="toggle">
-                <i class="far fa-moon"></i>
+                <i class="far fa-moon"></i>Dark Mode
             </button>
         </div>
-        <div class="middle"></div>
+        <div class="middle">
+            <div class="search">
+                <input type="text" placeholder="Search for country">
+                <i class="fas fa-search"></i>
+            </div>
+            <div class="dropdown">
+                <p>Filter By Region</p>
+                <button class="fas fa-chevron-down"></button>
+            </div>
+        </div>
         <div class="main"></div>
     </div>
    
