--- a/index.html
+++ b/index.html
@@ -21,12 +21,25 @@
                 <input type="text" placeholder="Search for country">
                 <i class="fas fa-search"></i>
             </div>
-            <div class="dropdown">
-                <p>Filter By Region</p>
-                <button class="fas fa-chevron-down"></button>
+            <div class="dropdownCon">
+                <div class="dropdown">
+                    <p>Filter By Region</p>
+                     <button><i class="fas fa-chevron-down"></i><button>
+                </div>
+                <div class="drop">
+                    <p>Asia</p>
+                    <p>Africa</p>
+                    <p>Europe</p>
+                    <p>America</p>
+                    <p>Oceania</p>
+                </div>
             </div>
         </div>
-        <div class="main"></div>
+        <div class="main">
+            <!-- <div class="country">
+
+            </div> -->
+        </div>
     </div>
    
 </body>
