add sample country with css

--- a/index.html
+++ b/index.html
@@ -36,9 +36,18 @@
             </div>
         </div>
         <div class="main">
-            <!-- <div class="country">
-
-            </div> -->
+            <div class="country">
+               <div class="country-img">
+                <!-- <img src="https://restcountries.eu/data/ala.svg" alt=""> -->
+                <img src="https://flagcdn.com/w320/mr.png" alt="">
+               </div>
+               <div class="country-info">
+                <h5>Africa</h5>
+                <p><strong>Population</strong> 12300000</p>
+                <p><strong>Region</strong> Africa</p>
+                <p><strong>Capital</strong> Africa</p>
+               </div>
+            </div>
         </div>
     </div>
    
