filter functionality by region

--- a/index.html
+++ b/index.html
@@ -17,21 +17,22 @@
             </button>
         </div>
         <div class="middle">
-            <div class="search">
+            <div class="form">
                 <input type="text" placeholder="Search for country">
-                <i class="fas fa-search"></i>
+                <i class="fas fa-search search"></i>
             </div>
             <div class="dropdownCon">
                 <div class="dropdown">
                     <p>Filter By Region</p>
                      <button><i class="fas fa-chevron-down"></i><button>
                 </div>
-                <div class="drop">
-                    <p>Asia</p>
-                    <p>Africa</p>
-                    <p>Europe</p>
-                    <p>America</p>
-                    <p>Oceania</p>
+                <div class="drop showDropdown">
+                    <p class="region">All</p>
+                    <p class="region">Asia</p>
+                    <p class="region">Africa</p>
+                    <p class="region">Europe</p>
+                    <p class="region">America</p>
+                    <p class="region">Oceania</p>
                 </div>
             </div>
         </div>
