--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="middle">
             <div class="form">
-                <input type="text" placeholder="Search for country">
+                <input type="text" class="search" placeholder="Search for country">
                 <i class="fas fa-search search"></i>
             </div>
             <div class="dropdownCon">
